# bot-sea

./: .env.cron  .env.example  .gitignore  ACTUALIZAR_SERVIDOR.md  CHANGELOG.md  CHEATSHEET.md  CRON_GUIDE.md  GUIA_DEPLOYMENT_SIMPLE.md  GUIA_DIGITALOCEAN.md  INSTALL.md  PRODUCCION.md  QUICKSTART.md  README.md  RESUMEN_FINAL.md  chatgpt_prompt.md  cron_setup.sh  debug_fresh.py  debug_live.py  debug_resend.py  debug_single.py  deploy_digitalocean.sh  initialize_db.py  monitorear.sh  preview_email.py  preview_remote.html  previsualizacion_correo.html  pyproject.toml  pytest.ini  requirements.txt  seia_executive_preview.html  seia_style_only_preview.html  seia_template_preview.html  setup.sh  setup_cron.sh  sync_panel_db_from_do.sh  test_cron.sh  verify.py
seia_monitor/: __init__.py  __main__.py  cli.py  config.py  diff.py  logger.py  models.py  normalizer.py  notifier_email.py  notifier_teams.py  panel_api.py  panel_seed.py  parser.py  runner.py  scheduler.py  scraper.py  scraper_detail.py  scraper_icsara.py  scraper_playwright.py  scraper_requests.py  storage.py
seia_monitor/panel_static/: app.jsx  index.html  styles.css
tests/: __init__.py
tests/fixtures/: sample_html.html
