[tool.poetry]
name = "seia-monitor"
version = "1.0.0"
description = "Sistema robusto de monitoreo diario del SEIA (Chile)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
playwright = "^1.40.0"
python-dotenv = "^1.0.0"
APScheduler = "^3.10.0"
typer = "^0.9.0"
rich = "^13.7.0"
pytz = "^2023.3"
lxml = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

